# CryoBrain

./: .gitignore  Dockerfile.hud  README.md  SPEC.md  SPEC5.md  env.py  grader.py  pyproject.toml  scenario_helpers.py  task_catalog.py  tasks.py
artifacts/: measured_50_iteration_summary.json  measured_climb.json  measured_fifo_climb.json  measured_memory_ab.json  measured_pareto.json
cryobrain/: __init__.py  types.py  types_fifo.py
demo/: dashboard.template.html  index.html
docs/: ARCHITECTURE.md  EDA_WSL.md  PROGRESS.md  PROGRESS_UPDATE_2026-06-21.md  SPEC_REALITY_AUDIT.md
scripts/: audit_reward_path.sh  build_demo.py  calibrate_reward.py  check_climb_smoke.py  check_cp0.py  check_cp1.py  check_cp2.py  check_cp3.py  check_cp5.py  check_cp5_memory.py  check_cp6.py  check_cp7.py  check_demo_rehearsal.py  check_golden_score.py  check_l3_smoke.py  check_marathon_iterations.py  check_spec_v61_checkpoints.py  check_sponsors.py  compute_ler_baselines_wsl.sh  demo_script.md  export_spec_v61_artifacts.py  export_spec_v61_wsl.sh  install_oss_cad_wsl.sh  launch_modal_measure.sh  plot_pareto.py  probe_osscad_url.sh  run_c5_climb.ps1  run_c5_climb_wsl.sh  run_cocotb_calibration_wsl.sh  run_cp0_wsl.sh  run_cp2_wsl.sh  run_cp3_wsl.sh  run_cp4_wsl.sh  run_cp5_wsl.sh  run_cp6_wsl.sh  run_cp7_wsl.sh  run_demo_build_wsl.sh  run_demo_refresh_wsl.sh  run_frontier_sweep_wsl.sh  run_gen_fifo_wsl.sh  (+14 more)
tests/: test_artifact_schemas.py  test_checkpoints.py  test_cp3_calibration.py  test_cp4_training.py  test_cp5_cp6_cp7.py  test_daytona_integration.py  test_demo_measured.py  test_grade.py  (+40 more)
(+1665 files in other folders)
